Fix - sidebar panel width after adjusting scrollbar css

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -728,7 +728,7 @@ body.everest-forms-builder-setup,
 		.everest-forms-panel-sidebar {
 			.everest-forms-add-fields,
 			.everest-forms-field-options {
-				padding: 15px 20px;
+				padding: 15px 12px 15px 20px;
 			}
 		}
 	}
