--- a/assets/css/scss/_admin.scss
+++ b/assets/css/scss/_admin.scss
@@ -1070,12 +1070,9 @@
 		}
 
 		&.ui-draggable-dragging {
-			border: 1px solid $color-brand-primary;
 			width: 105px !important;
-			color: $color-brand-primary;
 			text-align: center !important;
 			font-size: 12px !important;
-			box-shadow: 0 0 32px rgba(0, 0, 0, 0.15);
 		}
 	}
 
